# TestServer

./: CMakeLists.txt
client/: CMakeLists.txt
client/src/: main.cpp
include/: cache.hpp  file_utils.cpp  file_utils.hpp
include/exchange_protocol/: excange_protocol.hpp  file_info_data.hpp  iface_serialized_data.hpp
release/linux/: client  server
server/: CMakeLists.txt
server/src/: main.cpp  server.cpp  server.hpp
